# data-catalog-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
docker/postgres/: init.sql
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/data_catalog/: __init__.py  settings.py
src/data_catalog/agents/: __init__.py  crew.py  models.py
src/data_catalog/catalog/: __init__.py  database.py  models.py  repository.py
src/data_catalog/ingestion/: __init__.py  kaggle_client.py  pipeline.py  readers.py
src/data_catalog/privacy/: __init__.py  risk_scorer.py
src/data_catalog/privacy/anonymization/: __init__.py  engine.py  geohash_encoder.py  ip_masker.py  mac_hasher.py  temporal_generalizer.py
src/data_catalog/profiling/: __init__.py  metadata_extractor.py  models.py  pii_scanner.py
