[project]
name = "data-catalog-ai"
version = "0.1.0"
description = "Open source Data Catalog with AI-powered privacy governance for geolocation and mobility data"
authors = [
    {name = "Carlos Vinícius", email = "carlostkr02@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
keywords = ["data-catalog", "data-governance", "privacy", "lgpd", "gdpr", "geolocation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "kaggle>=1.6.0",
    "h3>=3.7.0",
    "python-geohash>=0.8.5",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "crewai>=0.51.0",
    "crewai-tools>=0.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[tool.poetry]
packages = [{include = "data_catalog", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = ">=3.7.0"
factory-boy = ">=3.3.0"
pandas-stubs = ">=2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/data_catalog --cov-report=term-missing --cov-report=html"
